chore: update jdk and deps version.